Bug 1926381 Fixing contrast issues in main nav for 3 themes
Making the background darker for hovers and active states in
main na for modern, ocean and primary themes.

behatnotneeded

(cherry picked from commit f20e11e2939e31546090ad1ad09c62eec3d91f51)

--- a/htdocs/theme/primaryschool/sass/utilities/_custom-variables.scss
+++ b/htdocs/theme/primaryschool/sass/utilities/_custom-variables.scss
@@ -40,7 +40,7 @@ $navbar-default-link-border:                transparent;
 $navbar-default-link-color:                 $white;
 $navbar-default-link-hover-color:           $white;
 $navbar-default-link-bg:                    $theme-primary-color;
-$navbar-default-link-hover-bg:              scale-color($navbar-default-link-bg, $lightness: -5%);
+$navbar-default-link-hover-bg:              scale-color($navbar-default-link-bg, $lightness: -10%);
 $navbar-default-active-color:               $gray-700;
 $navbar-default-active-bg:                  #f1f1f1;
 
@@ -48,7 +48,7 @@ $navbar-default-active-bg:                  #f1f1f1;
 $navbar-inverse-bg:                         scale-color($navbar-default-link-bg, $lightness: -10%);
 $navbar-inverse-link-color:                 $white;
 $navbar-inverse-link-hover-color:           $white;
-$navbar-inverse-link-hover-bg:              scale-color($navbar-inverse-bg, $lightness: -5.5%);
+$navbar-inverse-link-hover-bg:              scale-color($navbar-inverse-bg, $lightness: -15%);
 $navbar-inverse-link-active-color:          $white;
 $navbar-inverse-link-active-bg:             scale-color($navbar-default-link-bg, $lightness: -15%);
 
